[package]
name = "play_proxy"
version = "0.1.0"
authors = ["Chris Kalafarski <chris.kalafarski@prx.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
url = "2.2.2"
lazy_static = "1.4.0"
hyper-tls = "0.5.0"
reqwest = { version = "0.11" }
